<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/tema_aplicacio"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginTopTitle"
        android:layout_marginBottom="@dimen/marginBottomTitle"
        android:gravity="center"
        android:text="@string/aplicacion"
        android:textSize="@dimen/textSizeTitle" />

    <Button
        android:id="@+id/button1"
        style="@style/tema_aplicacio.button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jugar"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/configurar"
        android:textAllCaps="false"
        style="@style/tema_aplicacio.button"/>

    <Button
        android:id="@+id/button3"
        style="@style/tema_aplicacio.button"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/acercaDe"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/salir"
        android:textAllCaps="false"
        style="@style/tema_aplicacio.button"
        android:background="@drawable/degradat"
        />
        <!-- style="@style/tema_aplicacio.button"-->
    <android.gesture.GestureOverlayView
        android:id="@+id/gestures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gestureStrokeType="multiple"
        android:fadeOffset="800"
        />
</LinearLayout>